--- a/package.json
+++ b/package.json
@@ -8,12 +8,14 @@
   "scripts": {
     "build": "react-scripts build",
     "deploy": "netlify deploy --prod",
+    "doc": "rimraf doc && npx groc",
     "eject": "react-scripts eject",
     "start": "react-scripts start",
     "start:all": "npm-run-all --parallel --print-label start start:api",
     "start:api": "node tools/dev-server.mjs",
     "start:poll": "cross-env CHOKIDAR_USEPOLLING=true npm start",
-    "test": "react-scripts test"
+    "test": "react-scripts test",
+    "test:cov": "npm test -- --coverage --watchAll"
   },
   "engines": {
     "node": ">= 18",
@@ -96,6 +98,7 @@
     "@reduxjs/toolkit": "^1.9.7",
     "bson-objectid": "^2.0.4",
     "date-fns": "^2.30.0",
+    "groc": "^0.8.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-redux": "^8.1.3",
